--- a/newsevaluator/package.json
+++ b/newsevaluator/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "framer-motion": "^10.16.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.21.1",
     "react-webcam": "^7.1.1",
     "sass": "^1.66.1",
     "semantic-ui-react": "^2.1.4",
@@ -41,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-plugin-react": "^7.33.2",
     "react-router-dom": "^6.15.0"
   }
 }
