--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
