--- a/newsevaluator/package.json
+++ b/newsevaluator/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
