--- a/newsevaluator/package.json
+++ b/newsevaluator/package.json
@@ -26,6 +26,7 @@
     "react-webcam": "^7.1.1",
     "sass": "^1.66.1",
     "semantic-ui-react": "^2.1.4",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
