--- a/newsevaluator/package.json
+++ b/newsevaluator/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.1",
+    "openai": "^4.28.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
