--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "openai": "^4.19.0"
   }
 }
