--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = 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
