--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "openai": "^4.19.0"
